# PinmapGen

./: .gitignore  CONTRIBUTING.md  FUSION_TEST_GUIDE.md  LICENSE  MILESTONES.md  PROJECT_COMPLETION.md  README.md  SUCCESS_DOCUMENTATION.md  USER_GUIDE.md  pyproject.toml
.githooks/: README.md  install-hooks.ps1  install-hooks.sh  pre-commit  pre-commit.ps1
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: build-test.yml  release.yml  validate-pinmaps.yml
docs/: extending.md  faq.md  output-formats.md  troubleshooting.md  usage.md  workflows.md
examples/: README.md
examples/communication_module/: README.md  netlist.csv
examples/sensor_hub/: README.md  netlist.csv
examples/simple_led/: README.md  netlist.csv
fusion_addin/: PinmapGen.manifest  PinmapGen.py  PinmapGen.ulp  PinmapGen_Debug.ulp  PinmapGen_Manual.ulp  README.md  ULP_GUIDE.md  USER_GUIDE.md  install.py
fusion_addin/commands/: GeneratePinmapCommand.py  __init__.py
fusion_addin/core/: fusion_exporter.py  pinmap_generator.py
fusion_addin/utils/: __init__.py  error_handler.py  logger.py
hardware/exports/: esp32_netlist.csv  sample_netlist.csv  sample_schematic.sch  stm32g0_netlist.csv
tests/: README.md  test_bom_csv.py  test_emitters.py  test_fixes_35_44.py  test_fixes_46_55.py  test_fixes_56_60.py  test_fixes_61_64.py  test_integration.py  test_normalize.py  test_p0_fixes.py  test_p1_fixes.py  test_p2_fixes.py  test_p3_fixes.py  test_profile_validation.py  test_review_fixes.py  test_roles.py  test_toml_profiles.py
tests/fixtures/: minimal_netlist.csv
tools/: __init__.py
tools/pinmapgen/: __init__.py  bom_csv.py  cli.py  eagle_sch.py  emit_arduino.py  emit_json.py  emit_markdown.py  emit_mermaid.py  emit_micropython.py  esp32_profile.py  mcu_profiles.py  naming.py  normalize.py  pin_metadata.py  profile_loader.py  profile_registry.py  profile_schema.py  roles.py  rp2040_profile.py  stm32g0_profile.py  watch.py
tools/pinmapgen/profiles/: README.md  atmega2560.toml  atmega328p.toml  atsamd21.toml  atsamd51.toml  esp32.toml  esp32c3.toml  esp32s3.toml  nrf52840.toml  rp2040.toml  rp2350.toml  stm32f411.toml  stm32g0.toml  stm32h743.toml
